[project]
name = "pit-wall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.17",
    "fastf1>=3.6.1",
    "numpy>=2.3.4",
    "orjson>=3.11.4",
    "pandas>=2.3.3",
    "streamlit[charts]>=1.51.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "jupyter-client>=8.6.3",
    "pynvim>=0.6.0",
]
